apps/fluxer/ingress/ingressroutetcp.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: fluxer-livekit-tcp
  namespace: fluxer
spec:
  entryPoints:
    - livekit-tcp
  routes:
    - match: HostSNI(`*`)
      services:
        - name: livekit
          port: 7881
